K8S/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-mongo
spec:
  selector:
    matchLabels:
      app: api-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: api-mongo
    spec:
      containers:
      - name: api-mongo
        image: zero101010/monprospecteur:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
