K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-mongo
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: api-mongo
